--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>AgriMo | Homepage</title>
+    <title>DermaMarker | Homepage</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -37,7 +37,7 @@
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="top-bar text-white-50 row gx-0 align-items-center d-none d-lg-flex">
             <div class="col-lg-6 px-5 text-start">
-                <small class="ms-4"><i class="fa fa-envelope me-2"></i>orynbai.a@nisa.edu.kz</small>
+                <small class="ms-4"><i class="fa fa-envelope me-2"></i>ydyrysbayeva.t@nisa.edu.kz</small>
             </div>
             <div class="col-lg-6 px-5 text-end">
                 <small>Follow us:</small>
@@ -50,7 +50,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="{{ url_for('index') }}" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0">Agri<span class="text-white">Mo</span></h1>
+                <h1 class="fw-bold text-primary m-0">Derma<span class="text-white">Marker</span></h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -85,9 +85,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 pt-5">
-                                    <h1 class="display-4 text-white mb-3 animated slideInDown">AgriMo</h1>
-                                    <p class="fs-5 text-white-50 mb-5 animated slideInDown">The system of Digitalization and Automation
-                                        of the agricultural sector using artificial intelligence</p>
+                                    <h1 class="display-4 text-white mb-3 animated slideInDown">DermaMarker</h1>
+                                    <p class="fs-5 text-white-50 mb-5 animated slideInDown">Platform for Skin Scanning</p>
                                     <a class="btn btn-primary py-2 px-3 animated slideInDown" href="{{ url_for('causes') }}">
                                         Try Scan
                                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
@@ -105,9 +104,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 pt-5">
-                                  <h1 class="display-4 text-white mb-3 animated slideInDown">AgriMo</h1>
-                                  <p class="fs-5 text-white-50 mb-5 animated slideInDown">The system of Digitalization and Automation
-                                    of the agricultural sector using artificial intelligence</p>
+                                  <h1 class="display-4 text-white mb-3 animated slideInDown">DermaMarker</h1>
+                                  <p class="fs-5 text-white-50 mb-5 animated slideInDown">Platform for Skin Scanning</p>
                                   <a class="btn btn-primary py-2 px-3 animated slideInDown" href="{{ url_for('causes') }}">
                                         Try Scan
                                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
@@ -147,10 +145,10 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
                         <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">About Us</div>
-                        <h1 class="display-6 mb-5">We help farmers and agribusinesses optimize their crop yields, reduce waste and increase productivity while promoting sustainable farming practices by using technologies of AI</h1>
+                        <h1 class="display-6 mb-5">We help to prevent a skin cancer by diagnosing early stages</h1>
                         <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
                             <p class="text-dark mb-2"></p>
-                            <span class="text-primary">AgriMo is a platform that scans pigmented skin lesions on the body and analyzes them using AI</span>
+                            <span class="text-primary">DermaMarker is a platform that scans pigmented skin lesions on the body and analyzes them using AI</span>
                         </div>
                         <p class="mb-5">There are 9 diagnoses: intraepithelial carcinoma, basal cell carcinoma, solar lentigines, seborrheic keratoses, lichen-planus like keratoses, dermatofibroma, melanoma, melanocytic nevi, vascular lesions</p>
                         <a class="btn btn-primary py-2 px-3 me-3" href="{{ url_for('causes') }}">
@@ -229,14 +227,14 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h1 class="fw-bold text-primary mb-4">Agri<span class="text-white">Mo</span></h1>
-                    <p>We offer you a reliable the system of Digitalization and Automation of the agricultural sector using artificial intelligence based on a huge database. DermaMarker - Technologies that serve human needs</p>
+                    <h1 class="fw-bold text-primary mb-4">Derma<span class="text-white">Marker</span></h1>
+                    <p>We offer you a reliable dermatological scanner based on a huge database. DermaMarker - Technologies that serve human needs</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
                     <p><i class="fa fa-map-marker-alt me-3"></i>Astana, Kazakhstan</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+7 771 888 52 12</p>
-                    <p><i class="fa fa-envelope me-3"></i>orynbai.a@nisa.edu.kz</p>
+                    <p><i class="fa fa-phone-alt me-3"></i>+7 747 333 91 40</p>
+                    <p><i class="fa fa-envelope me-3"></i>ydyrysbayeva.t@nisa.edu.kz</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Last News</h5>
@@ -253,8 +251,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">AgriMo.kz</a>, All Right Reserved.
-                    </div>r
+                        &copy; <a href="#">DermaMarker.kz</a>, All Right Reserved.
+                    </div>
                 </div>
             </div>
         </div>
@@ -278,5 +276,6 @@
     <!-- Template Javascript -->
     <script src="{{url_for('static', filename='js/main.js')}}"></script>
 </body>
+
 
 </html>
