--- a/templates/causes.html
+++ b/templates/causes.html
@@ -28,6 +28,7 @@
     <!-- Template Stylesheet -->
     <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='css/style.css')}}" rel="stylesheet">
+
 </head>
 
 <body>
@@ -110,9 +111,95 @@
 		<img src="data:image/png;base64, {{x[1]}}" alt="" style="border-radius:8px;">
 		<img src="data:image/png;base64, {{x[2]}}" alt="" style="grid-column: 1 / span 2; border-radius:8px;">
 		<p style="color:black; grid-column: 1 / span 2; font-size:20px">{{x1}}</p>
-		<p style="color:black; grid-column: 1 / span 2; font-size:20px">{{x2}}</p>
+        <div class="analysis2">Danger level: {{da1}}</div>
+        <br>
+        <div class="analysis2">Most expected disease: {{maxdt}}</div>
+        <br>
+        <div class="analysis"><p style="color:white; font-size:20px;">{{x2}}</p></div>
+
+        <p><h3>Treatment</h3></p>
+
+        <div style="color:black; grid-column: 1 / span 2; font-size:20px">{{d1}}</div>
+
+
+
+        <br>
+        <p><h3>Recommended doctors</h3></p>
+        <div>
+            <img src={{im1}} alt="" style="border-radius:8px;width: 200px; height: 200px;">
+            <p style="padding-top: 5px; font-size: 16px; color:black">{{imp1}}</p>
+            <button type="submit" class="btn btn-primary btn-lg btn-block mt-4"> Take   Consultation</button>
+            <p style="padding-top: 5px; font-size: 16px; color:black">{{dt}}</p>
+        </div>
+        <br> <br> <hr>
+        <p><h3>Recommended medicines</h3></p>
+        <div>
+            <img src={{it1}} alt="" style="border-radius:8px;width: 200px; height: 200px;">
+            <p style="padding-top: 5px; font-size: 16px; color:black">{{imt1}}</p>
+            <button type="submit" class="btn btn-primary btn-lg btn-block mt-4">Buy</button>
+            <p style="padding-top: 5px; font-size: 16px; color:black">{{pm}}</p>
+        </div>
+        <br> <br> <hr>
+
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="row g-5">
+                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Contact Doctors</div>
+                        <h1 class="display-6 mb-5">If You Want To Get Consultation, Contact Doctors - Telephone: {{dt}}</h1>
+                        <form>
+                            <div class="row g-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                        <label for="name">Your Name</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                        <label for="email">Your Email</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                        <label for="subject">Subject</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                        <label for="message">Message</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn btn-primary py-2 px-3 me-3">
+                                        Send Message
+                                        <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
+                                            <i class="fa fa-arrow-right"></i>
+                                        </div>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 450px;">
+                        <div class="position-relative rounded overflow-hidden h-100">
+                            <iframe class="position-relative w-100 h-100"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1280241.596545701!2d70.30245259522225!3d51.19195632520301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424580c47db54609%3A0x97f9148dddb19228!2sAstana%20020000!5e0!3m2!1sen!2skz!4v1677339067646!5m2!1sen!2skz" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+                            frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
+                            tabindex="0"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
 </div>
 {% endif %}
+
+
 
 
         <!-- Footer Start -->
