--- a/static/css/style.css
+++ b/static/css/style.css
@@ -311,6 +311,39 @@
     z-index: 1;
 }
 
+.analysis {
+    background-color: #FF6F0F;
+    color: white;
+    border-radius: 10px;
+    width: 500px;
+    padding: 20px;
+    font-size: 16px;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    line-height: 1.5;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: grid;
+    align-items: center;
+}
+
+.analysis2 {
+    background-color: transparent;
+    color: #FF6F0F;
+    border-radius: 10px;
+    width: 500px;
+    padding: 20px;
+    font-size: 28px;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    line-height: 1.5;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: grid;
+    align-items: center;
+    border: 2px #FF6F0F solid;
+}
+
 @media (min-width: 768px) {
     .testimonial-carousel::before,
     .testimonial-carousel::after {
@@ -419,14 +452,13 @@ box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 6px;
   padding: 2em;
   display: grid;
-  grid-template-columns: 20% 80%;
   grid-row-gap: 25px;
   column-gap: 20px;
   align-items: center;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
   font-size: 16px;
-  color: var(--dark);
+  grid-template-columns: 20% 80%;
 }
 
 /* Style the images */
